--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
           HIVE_ENDPOINT: ${{ secrets.HIVE_ENDPOINT }}
         run: |
           echo $GITHUB_REPOSITORY
-          npm i -g @graphql-hive/cli@latest
+          npm i -g @graphql-hive/cli@0.30.2-alpha-20231023080855-d5083751
           hive schema:check "schema.graphql" \
             --registry.accessToken ${{ env.HIVE_TOKEN }} \
             --registry.endpoint ${{ env.HIVE_ENDPOINT }} \
             --service whatever \
-            --github
+            --github=true
