--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,4 +17,5 @@ jobs:
           hive schema:check "schema.graphql" \
             --registry.accessToken ${{ env.HIVE_TOKEN }} \
             --registry.endpoint ${{ env.HIVE_ENDPOINT }} \
+            --service "whatever" \
             --github
