--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,9 +13,6 @@ jobs:
           HIVE_ENDPOINT: ${{ secrets.HIVE_ENDPOINT }}
         run: |
           npm i -g @graphql-hive/cli@0.30.0-alpha-20231005153523-259db2a1
-          hive schema:publish "schema.graphql" \
+          hive schema:publish "schema.graphql" --github \
             --registry.accessToken ${{ env.HIVE_TOKEN }} \
-            --registry.endpoint ${{ env.HIVE_ENDPOINT }} \
-            --service whatever \
-            --url http://localhost:9898/graphql \
-            --github=true
+            --registry.endpoint ${{ env.HIVE_ENDPOINT }}
